# GameOfLife

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
core/: Cell.cpp  Cell.h  Grid.cpp  Grid.h  Pattern.cpp  Pattern.h  Rule.cpp  Rule.h  Simulator.cpp  Simulator.h
data/: patterns.json
ui/: GridView.cpp  GridView.h  PatternPanel.cpp  PatternPanel.h  RulePanel.cpp  RulePanel.h  SideBar.cpp  SideBar.h  StatsPanel.cpp  StatsPanel.h
ui/dialogs/: GridSettingsDialog.cpp  GridSettingsDialog.h  PatternSaveDialog.cpp  PatternSaveDialog.h  RuleEditDialog.cpp  RuleEditDialog.h
utils/: PatternSerializer.cpp  PatternSerializer.h
